[metadata]
name = pyxqueue
version = 0.1.1
author = FuGangqiang
author_email = fu_gangqiang@qq.com
description = a multi-processes task queue using redis streams.
long_description = file: README.md, README-zh.md
long_description_content_type = text/markdown
keywords = redis, stream, queue
url = https://github.com/FuGangqiang/pyxqueue
project_urls =
    Bug Tracker = https://github.com/FuGangqiang/pyxqueue/issues
    中文文档 = https://github.com/FuGangqiang/pyxqueue/blob/master/README-zh.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules = pyxqueue
python_requires = >=3.7
install_requires =
    redis >= "3.0.0"
